crates/uitest/fixtures/mir_check/typed_own_self_prefix_moves_receiver.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/typed_own_self_prefix_moves_receiver.fe
---
error[10-0002]: move conflict in `fn use_after_consume`
   ┌─ typed_own_self_prefix_moves_receiver.fe:14:5
   │
13 │     let value = s.consume()
   │                 - `s` is moved here
14 │     value + s.value
   │     ^^^^^^^^^^^^^^^ cannot use a value after it was moved
